# TaskSystem

./: .gitignore  CMakeLists.txt
include/: Configs.h  Container.h  Process.h  Processor.h  Queue.h  Stack.h  Task.h  TaskDistributor.h  TaskGeneration.h  TaskVisitor.h
src/: Processor.cpp  Queue.cpp  Stack.cpp  Task.cpp  TaskDistributor.cpp  TaskGeneration.cpp  TaskVisitor.cpp  main.cpp
